# aws_cdk_api_cognito_auth

./: README.md  app.py  pyproject.toml
cdk_cognito_auth/: cdk_cognito_auth_stack.py
functions/: lambda_function.py
tests/unit/: test_cdk_cognito_auth_stack.py
